k8s/base/laravel-service.yml
apiVersion: v1
kind: Service
metadata:
  name: laravel-service
spec:
  type: ClusterIP
  selector:
    app: laravel
  ports:
    - port: 80
      targetPort: 80
